--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 version: '3.8'
 services:
   backend:
-    build: ./backend
+    build: ./cloudapp/cloudapp
+    container_name: cloudapp-backend
     ports:
       - "8080:8080"
-    environment:
-      - SPRING_PROFILES_ACTIVE=prod
-
+    
   frontend:
-    build: ./frontend
+    build: ./UI/cloudapp
+    container_name: cloudapp-frontend
     ports:
       - "4200:80"
