--- a/cloudapp/cloudapp/src/main/resources/application.yml
+++ b/cloudapp/cloudapp/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
     docker:
         compose:
-            enabled: false
+            enabled: true
 
     datasource:
         url: jdbc:postgresql://localhost:5432/cloudapp
